Overflow Issue Resolved

--- a/css/domain.css
+++ b/css/domain.css
@@ -124,7 +124,7 @@
 @media screen and (max-width: 1000px) {
     .domain{
         width:100vw;
-        height: 100vh;
+        /* height: 100vh; */
         position: relative;
         display: block;
     }
